--- a/DOMexercises/index.html
+++ b/DOMexercises/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DOM Exercises</title>
+    <title>DOM </title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -54,6 +54,10 @@
         <button class="slidebutton-left">Previous Image</button>
         <img class="slide-images" src="" alt="Image">
         <button class="slidebutton-right">Next Image</button>
+    </div>
+
+    <div>
+        <h1>HEEEEEEEEEEEEEEEELLLLLLLLLLLLLOOOOOOOOOOOOOOOO</h1>
     </div>
 
 
