--- a/spotify-project/index.html
+++ b/spotify-project/index.html
@@ -27,31 +27,31 @@
                             <div class="song">
                                 <p class="song-order">1</p>
                                 <img class="play-button-image" src="images/play-button (2).png" alt="Play!">
-                                <img class="pause-button-image hidden" src="images\pause.-icon.lnk" alt="Pause">
+                                <img class="pause-button-image hidden" src="/workspaces/Public/spotify-project/images/pause.-icon.lnk" alt="Pause">
                                 <p class="song-details">Window Shopper <span class="song-artist">50 Cent</span></p>
                             </div>
                             <div class="song">
                                 <p class="song-order">2</p>
                                 <img class="play-button-image" src="images/play-button (2).png" alt="Play!">
-                                <img class="pause-button-image hidden" src="images\pause.-icon.lnk" alt="Pause">
+                                <img class="pause-button-image hidden" src="/workspaces/Public/spotify-project/images/pause.-icon.lnk" alt="Pause">
                                 <p class="song-details">Love Is Only A Feeling <span class="song-artist">Joey Bada$$</span></p>
                             </div>
                             <div class="song" >
                                 <p class="song-order">3</p>
                                 <img class="play-button-image" src="images/play-button (2).png" alt="Play!">
-                                <img class="pause-button-image hidden" src="images\pause.-icon.lnk" alt="Pause">
+                                <img class="pause-button-image hidden" src="/workspaces/Public/spotify-project/images/pause.-icon.lnk" alt="Pause">
                                 <p class="song-details">Superman <span class="song-artist">Eminem</span></p>
                             </div>
                             <div class="song">
                                 <p class="song-order">4</p>
                                 <img class="play-button-image" src="images/play-button (2).png" alt="Play!">
-                                <img class="pause-button-image hidden" src="images\pause.-icon.lnk" alt="Pause">
+                                <img class="pause-button-image hidden" src="/workspaces/Public/spotify-project/images/pause.-icon.lnk" alt="Pause">
                                 <p class="song-details">When It Rain It Pours <span class="song-artist">50 Cent</span></p>
                             </div>
                             <div class="song">
                                 <p class="song-order">5</p>
                                 <img class="play-button-image" src="images/play-button (2).png" alt="Play!">
-                                <img class="pause-button-image hidden" src="images\pause.-icon.lnk" alt="Pause">
+                                <img class="pause-button-image hidden" src="images/pause.-icon.lnk" alt="Pause">
                                 <p class="song-details">
                                     Welcome <span class="song-artist">J.Cole</span>
                                 </p>
