--- a/spotify-project/pages/50cent.html
+++ b/spotify-project/pages/50cent.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>50 Cent Playlist</title>
-    <link rel="stylesheet" href="C:\Users\sidri\Desktop\Projects\spotify project\css\cent.css">
+    <link rel="stylesheet" href="spotify-project/css/cent.css">
 </head>
 
 <body>
     <div class="container">
         <header>
             <div class="banner-container">
-                <img class="banner-image" src="C:\Users\sidri\Desktop\Projects\spotify project\images\50-cent-banner.webp" alt="Image of a Concert.">
+                <img class="banner-image" src="spotify-project/images/50-cent-banner.webp   " alt="Image of a Concert.">
                 <div class="banner-content">
                     <h1>50 Cent</h1>
                     <p>Get Rich or Die Trying</p>
@@ -28,35 +28,35 @@
                     <div class="song song-1">
                         <p class="song-order">1</p>
                         <img class="play-button-image" src="../images/play-button (2).png" alt="Play!">
-                        <img class="pause-button-image hidden" src="C:\Users\sidri\Desktop\Projects\spotify project\images\pause.-icon.lnk" alt="Pause!">
+                        <img class="pause-button-image hidden" src="spotify-project/images/pause.-icon.lnk" alt="Pause!">
                         <img class="album-cover" src="C:\Users\sidri\Desktop\Projects\spotify project\images\in-da-club-cover.jpg" alt="Album Cover">
                         <p class="song-details">In Da Club <span class="song-artist">50 Cent</span></p>
                     </div>
                     <div class="song song-2">
                         <p class="song-order">2</p>
                         <img class="play-button-image" src="../images/play-button (2).png" alt="Play!">
-                        <img class="pause-button-image hidden" src="C:\Users\sidri\Desktop\Projects\spotify project\images\pause.-icon.lnk" alt="Pause!">
+                        <img class="pause-button-image hidden" src="spotify-project/images/pause.-icon.lnk" alt="Pause!">
                         <img class="album-cover" src="C:\Users\sidri\Desktop\Projects\spotify project\images\candy-shop-cover.jpg" alt="Album Cover">
                         <p class="song-details">Candy Shop <span class="song-artist">50 Cent</span></p>
                     </div>
                     <div class="song song-3">
                         <p class="song-order">3</p>
                         <img class="play-button-image" src="../images/play-button (2).png" alt="Play!">
-                        <img class="pause-button-image hidden" src="C:\Users\sidri\Desktop\Projects\spotify project\images\pause.-icon.lnk" alt="Pause!">
+                        <img class="pause-button-image hidden" src="spotify-project/images/pause.-icon.lnk" alt="Pause!">
                         <img class="album-cover" src="C:\Users\sidri\Desktop\Projects\spotify project\images\in-da-club-cover.jpg" alt="Album Cover">
                         <p class="song-details">Many Men(Wish Death) <span class="song-artist">50 Cent</span></p>
                     </div>
                     <div class="song song-4">
                         <p class="song-order">4</p>
                         <img class="play-button-image" src="../images/play-button (2).png" alt="Play!">
-                        <img class="pause-button-image hidden" src="C:\Users\sidri\Desktop\Projects\spotify project\images\pause.-icon.lnk" alt="Pause!">
+                        <img class="pause-button-image hidden" src="spotify-project/images/pause.-icon.lnk" alt="Pause!">
                         <img class="album-cover" src="C:\Users\sidri\Desktop\Projects\spotify project\images\baby-by-me-cover.jpg" alt="Album Cover">
                         <p class="song-details">Baby By Me <span class="song-artist">50 Cent</span></p>
                     </div>
                     <div class="song song-5">
                         <p class="song-order">5</p>
                         <img class="play-button-image" src="../images/play-button (2).png" alt="Play!">
-                        <img class="pause-button-image hidden" src="C:\Users\sidri\Desktop\Projects\spotify project\images\pause.-icon.lnk" alt="Pause!">
+                        <img class="pause-button-image hidden" src="spotify-project/images/pause.-icon.lnk" alt="Pause!">
                         <img class="album-cover" src="C:\Users\sidri\Desktop\Projects\spotify project\images\in-da-club-cover.jpg" alt="Album Cover">
                         <p class="song-details">P.I.M.P. <span class="song-artist">50 Cent</span></p>
                     </div>
@@ -95,7 +95,7 @@
                     <img src="../images/play-button (2).png" alt="Play!">
                 </div>
                 <div class="player-icon-pause hidden">
-                    <img src="C:\Users\sidri\Desktop\Projects\spotify project\images\pause.-icon.lnk" alt="Pause!">
+                    <img src="spotify-project/images/pause.-icon.lnk" alt="Pause!">
                 </div>
             </button>
             <div id="next-song">></div>
@@ -108,8 +108,8 @@
             <span class="player-time" id="player-time-duration">0:0</span>
             <div class="volume-button">
                 <button id="volume-button">
-                    <img class="volume-button-active" src="C:\Users\sidri\Desktop\Projects\spotify project\images\—Pngtree—volume icon_4490396.png" alt="Unmute">
-                    <img class="volume-button-mute hidden" src="C:\Users\sidri\Desktop\Projects\spotify project\images\sound-off-icon-40963.png" alt="Mute">
+                    <img class="volume-button-active" src="spotify-project/images/—Pngtree—volume icon_4490396.png" alt="Unmute">
+                    <img class="volume-button-mute hidden" src="spotify-project/images/sound-off-icon-40963.png" alt="Mute">
                 </button>
                 <div class="adjust-volume-bar">
                     <div class="adjust-volume"></div>
@@ -121,6 +121,6 @@
         </audio>
     </footer>
     <p>change</p>
-    <script src="C:\Users\sidri\Desktop\Projects\spotify project\js\50cent.js"></script>
+    <script src="spotify-project/js/50cent.js"></script>
 </body>
 </html> 
